// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queryCS: 序 1`] = `
Array [
  Object {
    "调": 4,
    "释": "〔原〕",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔新〕",
    "音": "ɕi",
  },
]
`;

exports[`queryCS: 指 1`] = `
Array [
  Object {
    "调": 6,
    "释": "〔未注明异读原因〕",
    "音": "tsɿ",
  },
  Object {
    "调": 3,
    "释": "〔未注明异读原因〕",
    "音": "tsɿ",
  },
]
`;

exports[`queryCS: 樹 1`] = `
Array [
  Object {
    "调": 5,
    "释": "〔文〕树立",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔白〕树立",
    "音": "ɕy",
  },
  Object {
    "调": 5,
    "释": "〔文〕树林",
    "音": "ɕy",
  },
  Object {
    "调": 4,
    "释": "〔白〕树林",
    "音": "ɕy",
  },
]
`;

exports[`queryCS: 蟻 1`] = `
Array [
  Object {
    "调": 2,
    "释": "〔文〕",
    "音": "ȵi",
  },
  Object {
    "调": 5,
    "释": "〔白〕",
    "音": "ȵi",
  },
  Object {
    "调": 3,
    "释": "〔白〕",
    "音": "ȵi",
  },
  Object {
    "调": 4,
    "释": "〔白〕",
    "音": "ȵi",
  },
]
`;
